# sese-plugin

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  vcpkg.json
cmake/: sese-plugin-config.cmake.in
include/sese/plugin/: BaseClass.h  BaseClassFactory.h  ClassFactory.h  Marco.h  ModuleInfo.h
src/: ClassFactory.cpp
test/: BUILD  CMakeLists.txt  MyModule.cpp
